Se corrigen ultimos detalles de la busqueda y resultados

--- a/Tarea 1/.gitignore
+++ b/Tarea 1/.gitignore
@@ -4,3 +4,9 @@ dataset_c/
 datos_R/
 .vscode
 1_tarea1.pdf
+
+resultados_dataset_a.txt
+resultados_dataset_b.txt
+resultados_dataset_c.txt
+resultados.txt
+
